macros/tests/compile_fail/name_not_string.stderr
error: name attribute must be a string literal
 --> tests/compile_fail/name_not_string.rs:5:23
  |
5 | #[melbi_fn_new(name = 123)]
  |                       ^^^
